--- a/index.html
+++ b/index.html
@@ -4,24 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Question Page</title>
-    <script>
-        // JavaScript function to display a question
-        function displayQuestion() {
-            // Get the question element by its ID
-            var questionElement = document.getElementById("question");
-
-            // Set the question text
-            questionElement.innerHTML = "What is your favorite programming language?";
-        }
-    </script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to the Question Page!</h1>
+    <div id="question-box">
+        <!-- Question will be displayed here -->
+        <p id="question">What is your favorite programming language?</p>
+    </div>
 
-    <!-- Question will be displayed here -->
-    <p id="question"></p>
+    <!-- Input box for user response -->
+    <input type="text" id="answer" placeholder="Your answer...">
 
-    <!-- Button to trigger the displayQuestion function -->
-    <button onclick="displayQuestion()">Show Question</button>
+    <script>
+        // JavaScript function to show the input box
+        document.getElementById("answer").style.display = "block";
+    </script>
 </body>
 </html>
